icinga-editor (1.3.5) UNRELEASED; urgency=medium

  [ vitex ]
  * Merge origin/master

  [ Vítězslav Dvořák ]
  * 

  [ CyberVitexus ]
  * Debian Buster
  * Regenerate All fixed
  * Release v1.3.2
  * HostgroupSelect updated
  * Release v1.3.4

 -- CyberVitexus <vitex@exiv.jinonice.czf>  Thu, 18 Jun 2020 15:34:24 +0200